简单的模板结构放置